--- a/client/public/index.html
+++ b/client/public/index.html
@@ -22,5 +22,6 @@
     <div id="root"></div>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.2/particles.min.js"></script>
+    <script type="text/javascript" src="node_modules/auth0-js/build/auth0.js"></script>
   </body>
 </html>
